[tool.poetry]
name = "rlt-task-employee-salary"
version = "0.1.0"
description = ""
authors = ["c4chula <henry.foster71@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.1.1"
motor = "^3.3.1"
pydantic-settings = "^2.0.3"
python-dateutil = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
